Matlab access initial.

--- a/mex/CMakeLists.txt
+++ b/mex/CMakeLists.txt
@@ -1,5 +1,7 @@
 include_directories("/usr/include/eigen3")
 set(CMAKE_CXX_FLAGS "-std=c++11 -fopenmp")
 
-add_library(uraster uraster_mex.cpp)
+#add_library(uraster uraster_mex.hpp)
+# /usr/local/MATLAB/R2012a/bin/mex -I/usr/include/eigen3 -I.. -v CXXFLAGS='$CXXFLAGS -std=c++11 -fopenmp' uraster.cpp
+
 
